--- a/index.html
+++ b/index.html
@@ -122,6 +122,13 @@
             cursor: pointer;
             margin-top: 10px;
         }
+        #scrollToTopBtn {
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+            display: none; /* Initially hide the button */
+            z-index: 999; /* Ensure the button stays on top of other elements */
+        }
         @media (max-width: 768px) {
             header #branding,
             header nav {
