--- a/index.html
+++ b/index.html
@@ -118,16 +118,16 @@
             <p>January 2024 – June 2024 | Rawalpindi, Pakistan</p>
             <ul>
                 <li>Worked on Large Language Models (LLMs) for text summarization and information extraction, enhancing content comprehension.</li>
-                <li>Implemented text classification models using HuggingFace transformers (BERT, RoBERTa) to analyze textual data.</li>
+                <li>Implemented text classification models using HuggingFace transformers (BERT, RoBERTa) to analyze textual data, including sentiment analysis tasks.</li>
             </ul>
         </div>
         <div class="box">
             <h3>Machine Learning Engineer - Datacrypt</h3>
             <p>October 2022 – December 2023 | Remote, UAE</p>
             <ul>
-                <li>Developed intelligent chatbots using the RASA Framework, improving user interaction.</li>
+                <li>Developed intelligent chatbots using the RASA Framework, improving user interaction and feedback collection.</li>
                 <li>Designed and maintained data automation pipelines, ensuring efficient data handling and processing.</li>
-                <li>Deployed multiple machine learning applications on AWS, Azure, and GCP.</li>
+                <li>Deployed multiple machine learning applications on AWS, Azure, and GCP, ensuring scalability and reliability.</li>
             </ul>
         </div>
         <div class="box">
@@ -135,7 +135,8 @@
             <p>April 2021 – May 2022 | Islamabad, Pakistan</p>
             <ul>
                 <li>Enhanced the company’s product with machine learning-based components, focusing on NLP for better user engagement.</li>
-                <li>Trained and deployed NLP models for text classification and analysis.</li>
+                <li>Trained and deployed NLP models for text classification and analysis, including sentiment analysis models.</li>
+                <li>Conducted data engineering tasks on textual data to improve model performance.</li>
             </ul>
         </div>
     </section>
@@ -154,6 +155,11 @@
             <p>Oct 2015 – Mar 2018 | Peshawar, Pakistan | Marks: 80.58%</p>
             <p>Courses: Data Structures, Algorithms, Databases, Networking, C++, Software Engineering, Artificial Intelligence</p>
         </div>
+        <div class="box">
+            <h3>Bachelor of Computer Science - Bacha Khan University Charsadda</h3>
+            <p>Oct 2013 – Aug 2015 | Charsadda, Pakistan</p>
+            <p>Courses: Computer Science, Mathematics-A, Physics</p>
+        </div>
     </section>
 
     <!-- Skills -->
@@ -171,21 +177,64 @@
         <h2 class="section-title">Projects</h2>
         <div class="box">
             <h4>Voice-Based AI Assistant for Elderly</h4>
-            <p>Developed a voice-based AI assistant system designed to support elderly individuals by answering queries related to their health, medicines, and other relevant topics.</p>
+            <p>Developed a voice-based AI assistant system designed to support elderly individuals by answering queries related to their health, medicines, and other relevant topics. This system utilized the Phi-3.5 model and integrated various open-source text-to-speech (TTS) and speech-to-text (STT) models.</p>
         </div>
         <div class="box">
             <h4>Document Summarization System</h4>
-            <p>Developed an advanced document summarization system using Meta LLAMA-2 integrated into a Django-based web app.</p>
+            <p>Developed an advanced document summarization system using Meta LLAMA-2 integrated into a Django-based web app. The project involved summarizing documents of varying lengths and formats, leveraging a quantized Meta LLAMA-2 13B model.</p>
         </div>
         <div class="box">
             <h4>Domain Classification System</h4>
-            <p>Developed a domain classification system for a complex document dataset with nearly 100 domains.</p>
+            <p>Developed a domain classification system for a complex document dataset with nearly 100 domains. Overcame challenges of limited and noisy labeled data by generating synthetic data and fine-tuning RoBERTa base models.</p>
         </div>
         <div class="box">
             <h4>Sentiment Analysis System</h4>
-            <p>Developed a sentiment analysis model to classify paragraphs within documents into various categories.</p>
+            <p>Developed a sentiment analysis model to classify paragraphs within documents into five categories: Negative, Extreme Negative, Neutral, Positive, and Extreme Positive.</p>
         </div>
-        <!-- Add additional projects here -->
+        <div class="box">
+            <h4>Data Processing Pipeline System</h4>
+            <p>Designed and implemented a data processing pipeline system for the Azadea Group, handling over 10GB of XML files daily. Utilized Python, Numpy, Pandas, and lxml to effectively manage and process large datasets.</p>
+        </div>
+        <div class="box">
+            <h4>Message Health Checker</h4>
+            <p>Developed "Message Health Checker," a sophisticated RoBERTa-based classification system for LinkedIn messages. This tool categorizes messages into multi-label categories with ranks, assessing tone and effectiveness.</p>
+        </div>
+        <div class="box">
+            <h4>Message Assistant</h4>
+            <p>Developed a multiclass multilabel text classification model for job advertisement messages sent by recruiters on LinkedIn to job candidates. The classification determines the quality of the message and uses an AI-based text assistant.</p>
+        </div>
+        <div class="box">
+            <h4>Job Description Splitting into Sections</h4>
+            <p>Created a hybrid approach algorithm to split job descriptions into logical sections, improving precision and recall for other components of QLU.ai’s primary product.</p>
+        </div>
+        <div class="box">
+            <h4>Job Description Sections Classification</h4>
+            <p>Trained transformer-based models such as BERT, RoBERTa, and XLNet to classify each section of a job description. This component enhances the accuracy of other components of QLU.ai’s primary product.</p>
+        </div>
+        <div class="box">
+            <h4>Text Summarization, Paraphrasing, and Grammar Correction</h4>
+            <p>Researched pre-trained models with good accuracy for paraphrasing, text summarization, and grammar correction. These models serve as helper components for QLU.ai’s message generation feature.</p>
+        </div>
+        <div class="box">
+            <h4>Conversational AI System (Chatbot)</h4>
+            <p>Developed a conversational AI system using the RASA Framework to handle communication between recruiters and candidates on LinkedIn.</p>
+        </div>
+        <div class="box">
+            <h4>Pokémon Image Classification</h4>
+            <p>Applied Feed-Forward Neural Network (FFNN) and Convolutional Neural Network (CNN) to classify Pokémon images into different categories as part of an academic project.</p>
+        </div>
+        <div class="box">
+            <h4>Names Generation</h4>
+            <p>Developed a text generation model based on RNN to generate names in an academic project.</p>
+        </div>
+        <div class="box">
+            <h4>Generating Meaningful Word Embeddings</h4>
+            <p>Trained Skip-Gram, CBOW, and SVD models on a custom dataset to generate meaningful word embeddings as part of an academic project.</p>
+        </div>
+        <div class="box">
+            <h4>Deployments on Cloud</h4>
+            <p>Deployed various services on different cloud hosting platforms, including AWS, Azure, and GCP.</p>
+        </div>
     </section>
 
     <!-- Certifications -->
@@ -195,7 +244,17 @@
             <li class="list-group-item">Natural Language Processing Specialization - Coursera</li>
             <li class="list-group-item">Introduction to Large Language Models - Coursera</li>
             <li class="list-group-item">Generative AI with Large Language Models - Coursera</li>
-            <!-- Add additional certifications here -->
+            <li class="list-group-item">Build Basic Generative Adversarial Networks (GANs) - Coursera</li>
+            <li class="list-group-item">Introduction to Self-Driving Cars - Coursera</li>
+            <li class="list-group-item">Python Essentials for MLOps - Coursera</li>
+            <li class="list-group-item">AI For Everyone - Coursera</li>
+            <li class="list-group-item">How Google does Machine Learning - Coursera</li>
+            <li class="list-group-item">Artificial Intelligence on Microsoft Azure - Coursera</li>
+            <li class="list-group-item">Introduction to Deep Learning - Coursera</li>
+            <li class="list-group-item">Neural Networks and Deep Learning - Coursera</li>
+            <li class="list-group-item">Supervised Machine Learning: Regression and Classification - Coursera</li>
+            <li class="list-group-item">Mathematics for Machine Learning: Linear Algebra - Coursera</li>
+            <!-- Add additional certifications if needed -->
         </ul>
     </section>
 
@@ -210,15 +269,22 @@
             <h4>Mukhtasir-Khail-Net: An Ultra Efficient Convolutional Neural Network</h4>
             <p>For Sports Activity Recognition with Wearable Inertial Sensors —– Accepted</p>
         </div>
-        <!-- Add additional publications here -->
+        <div class="box">
+            <h4>Paying Attention to Human Activities</h4>
+            <p>Recognizing Daily Activities with an Attention-based Neural Network and Inertial Sensors —– In Review</p>
+        </div>
+        <div class="box">
+            <h4>Enhancing Recruiter Outreach</h4>
+            <p>Predicting Job Ad Quality with Advanced Machine Learning and NLP Models —– Submitted</p>
+        </div>
     </section>
 
     <!-- Awards -->
     <section id="awards" class="container">
         <h2 class="section-title">Awards</h2>
         <ul class="list-group">
-            <li class="list-group-item">Stoori da Pakhtunkhwa (Stars of the Pukhtunkhwa) Scholarship</li>
-            <li class="list-group-item">Top 1% in GAT General Test</li>
+            <li class="list-group-item">Stoori da Pakhtunkhwa (Stars of the Pukhtunkhwa) Scholarship - Secured 15th position among the Top 20 students from Government Colleges in BISE Peshawar</li>
+            <li class="list-group-item">Top 1% in GAT General Test - Scored 83 out of 100 marks with a 99.62 percentile</li>
         </ul>
     </section>
 
