--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg">
         <div class="container">
-            <a class="navbar-brand" href="#">Shaida Muhammad</a>
+            <a class="navbar-brand" href="#">Shaida Muhammad Sherpao</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -98,7 +98,7 @@
     <section class="showcase">
         <div class="container">
             <h1>Welcome to My Personal Webpage</h1>
-            <p>Senior Machine Learning Engineer specializing in NLP and AI</p>
+            <p>Senior Machine Learning Engineer specializing in NLP, Machine Learning, and Artificial Intelligence</p>
         </div>
     </section>
 
@@ -166,8 +166,8 @@
     <section id="skills" class="container">
         <h2 class="section-title">Skills</h2>
         <ul class="list-group">
-            <li class="list-group-item">Programming Languages and Frameworks: Python, Java, C++, Flask, Django, FastAPI</li>
-            <li class="list-group-item">Machine Learning Libraries: PyTorch, Scikit-learn, NLTK, SciPy, Numpy, Pandas, TensorFlow, Keras, HuggingFace</li>
+            <li class="list-group-item">Programming Languages and Frameworks: Python, Java, C++, Flask, Django, FastAPI etc.</li>
+            <li class="list-group-item">Machine Learning Libraries: PyTorch, Scikit-learn, NLTK, SciPy, Numpy, Pandas, TensorFlow, Keras, HuggingFace etc.</li>
             <li class="list-group-item">Other Skills: Git, GitHub, GitLab, SQL, Linux</li>
         </ul>
     </section>
@@ -262,20 +262,20 @@
     <section id="publications" class="container">
         <h2 class="section-title">Research Publications</h2>
         <div class="box">
-            <h4>Enhanced Human Activity Recognition using Inertial Sensor Data from Smart Wearables</h4>
-            <p>A Neural Network Approach with Residual Connections —– Published</p>
+            <h4>Enhanced Human Activity Recognition using Inertial Sensor Data from Smart Wearables: A Neural Network Approach with Residual Connections —– Published</h4>
+            <p>We propose a CNN architecture with residual connections for Human Activity Recognition (HAR) that outperforms existing methods with 98.32% accuracy on the WISDM dataset, using just 38,342 trainable parameters.</p>
         </div>
         <div class="box">
-            <h4>Mukhtasir-Khail-Net: An Ultra Efficient Convolutional Neural Network</h4>
-            <p>For Sports Activity Recognition with Wearable Inertial Sensors —– Accepted</p>
+            <h4>Mukhtasir-Khail-Net: An Ultra Efficient Convolutional Neural Network: For Sports Activity Recognition with Wearable Inertial Sensors —– Accepted</h4>
+            <p>Mukhtasir-Khail-Net, a lightweight model with 651 parameters, excels in Sports Activity Recognition using wearable sensors, achieving 98.87% accuracy across six sports activities and 94.24% on the WISDM 11 dataset.</p>
         </div>
         <div class="box">
-            <h4>Paying Attention to Human Activities</h4>
-            <p>Recognizing Daily Activities with an Attention-based Neural Network and Inertial Sensors —– In Review</p>
+            <h4>Paying Attention to Human Activities: Recognizing Daily Activities with an Attention-based Neural Network and Inertial Sensors —– In Review</h4>
+            <p>AktionFocusNet, a novel deep-learning model with an attention mechanism, enhances Human Activity Recognition (HAR) in the IoMT domain, achieving 97.91% accuracy on the WISDM dataset, outperforming existing models.</p>
         </div>
         <div class="box">
-            <h4>Enhancing Recruiter Outreach</h4>
-            <p>Predicting Job Ad Quality with Advanced Machine Learning and NLP Models —– Submitted</p>
+            <h4>Enhancing Recruiter Outreach: Predicting Job Ad Quality with Advanced Machine Learning and NLP Models —– Submitted</h4>
+            <p>Our study enhances recruiter messaging on LinkedIn by identifying five key features of effective job marketing messages and evaluating various machine learning models to boost response rates and hiring outcomes.</p>
         </div>
     </section>
 
@@ -292,9 +292,10 @@
     <section id="contact" class="container">
         <h2 class="section-title">Contact</h2>
         <p>Email: <a href="mailto:shaidasherpao@gmail.com">shaidasherpao@gmail.com</a></p>
-        <p>Phone: +92-313-9190354</p>
+        <p>Phone & Whatsapp: +92-313-9190354</p>
         <p>Location: Islamabad, Pakistan</p>
         <p>LinkedIn: <a href="https://linkedin.com/in/shaidamuhammad" target="_blank">Shaida Muhammad</a></p>
+        <p>Facebook: <a href="https://facebook.com/shaida.muhd" target="_blank">Shaida Muhammad</a></p>
     </section>
 
     <footer>
