--- a/index.html
+++ b/index.html
@@ -1,143 +1,133 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Shaida Muhammad's Personal Website</title>
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+  <title>Shaida Muhammad | Machine Learning Engineer</title>
+  <!-- Bootstrap CDN -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Font Awesome for Icons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+  <!-- Custom Styles -->
   <style>
-    .section-title {
-      margin-top: 2rem;
-      font-size: 1.5rem;
-      font-weight: bold;
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f4f4f9;
     }
-
-    .section-content {
-      margin-bottom: 2rem;
+    .navbar {
+      margin-bottom: 30px;
+    }
+    .section-heading {
+      margin-top: 20px;
+      padding-bottom: 10px;
+      border-bottom: 2px solid #007bff;
+    }
+    .footer {
+      background-color: #343a40;
+      color: #ffffff;
+      padding: 15px 0;
+      text-align: center;
     }
   </style>
 </head>
-
 <body>
-  <!-- Navigation -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+
+  <!-- Navigation Bar -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
-      <a class="navbar-brand" href="#intro">Shaida Muhammad</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive"
-        aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+      <a class="navbar-brand" href="#">Shaida Muhammad</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarResponsive">
+      <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link" href="#intro">Introduction</a></li>
+          <li class="nav-item"><a class="nav-link" href="#introduction">Introduction</a></li>
+          <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
           <li class="nav-item"><a class="nav-link" href="#experience">Experience</a></li>
+          <li class="nav-item"><a class="nav-link" href="#publications">Publications</a></li>
           <li class="nav-item"><a class="nav-link" href="#education">Education</a></li>
           <li class="nav-item"><a class="nav-link" href="#skills">Skills</a></li>
-          <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
-          <li class="nav-item"><a class="nav-link" href="#research">Publications</a></li>
           <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
         </ul>
       </div>
     </div>
   </nav>
 
-  <!-- Main content -->
-  <div class="container" style="margin-top: 5rem;">
+  <!-- Introduction Section -->
+  <section id="introduction" class="container">
+    <h2 class="section-heading">Introduction</h2>
+    <p>Experienced Machine Learning Engineer specializing in NLP, large language models, and intelligent automation. Proficient in deploying scalable applications and creating robust data pipelines with frameworks such as PyTorch, HuggingFace, and Keras.</p>
+  </section>
 
-    <!-- Introduction -->
-    <section id="intro" class="section-content">
-      <h2 class="section-title">Introduction</h2>
-      <p>Hello! I’m Shaida Muhammad, a Machine Learning Engineer with experience in NLP, sentiment analysis, and LLMs such as Meta LLAMA-2 and Phi-3.5. I specialize in text summarization, classification, and conversational AI.</p>
-      <ul>
-        <li>Email: shaidasherpao@gmail.com</li>
-        <li>Phone: +92-313-9190354</li>
-        <li>Location: Islamabad, Pakistan</li>
-        <li><a href="https://www.linkedin.com/in/shaidamuhammad" target="_blank">LinkedIn</a></li>
-      </ul>
-    </section>
+  <!-- Projects Section -->
+  <section id="projects" class="container">
+    <h2 class="section-heading">Projects</h2>
+    <ul>
+      <li><strong>Voice-Based AI Assistant for Elderly:</strong> Developed a voice-based AI system for assisting elderly individuals with health and daily inquiries. Utilized PHI-3.5 and open-source TTS and STT models.</li>
+      <li><strong>Document Summarization System:</strong> Created a Django-based app for document summarization using a quantized Meta LLaMA-2 model.</li>
+      <li><strong>Domain Classification System:</strong> Built a classification system for documents across 100+ domains with an accuracy of 80% using synthetic data and fine-tuned RoBERTa.</li>
+      <li><strong>Sentiment Analysis System:</strong> Developed a five-category sentiment analysis model for document paragraphs, enhancing content insights.</li>
+      <li><strong>Data Processing Pipeline System:</strong> Processed over 10GB of XML files daily for Azadea Group, optimized for low-RAM hardware.</li>
+    </ul>
+  </section>
 
-    <!-- Work Experience -->
-    <section id="experience" class="section-content">
-      <h2 class="section-title">Work Experience</h2>
-      <div>
-        <h5>Sr. Machine Learning Engineer - Love For Data</h5>
-        <p><em>January 2024 – June 2024</em></p>
-        <ul>
-          <li>Enhanced content comprehension with LLMs for text summarization and information extraction.</li>
-          <li>Implemented text classification models using BERT and RoBERTa.</li>
-        </ul>
-      </div>
-      <div>
-        <h5>Machine Learning Engineer - Datacrypt</h5>
-        <p><em>October 2022 – December 2023</em></p>
-        <ul>
-          <li>Developed chatbots using RASA and optimized data pipelines.</li>
-          <li>Deployed machine learning applications on AWS, Azure, and GCP.</li>
-        </ul>
-      </div>
-      <!-- Add other roles similarly -->
-    </section>
+  <!-- Experience Section -->
+  <section id="experience" class="container">
+    <h2 class="section-heading">Professional Experience</h2>
+    <ul>
+      <li><strong>Senior Machine Learning Engineer</strong> at Love For Data: Worked on text summarization and classification models for improved content comprehension.</li>
+      <li><strong>Machine Learning Engineer</strong> at DataCrypt.ae: Developed intelligent chatbots and deployed ML applications on AWS, Azure, and GCP.</li>
+      <li><strong>Machine Learning Engineer</strong> at QLU.ai: Enhanced user engagement with NLP models and deployed classification systems.</li>
+    </ul>
+  </section>
 
-    <!-- Education -->
-    <section id="education" class="section-content">
-      <h2 class="section-title">Education</h2>
-      <div>
-        <h5>MS in Computer Science</h5>
-        <p>National University of Sciences and Technology, Islamabad (CGPA: 3.90)</p>
-      </div>
-      <div>
-        <h5>M.Sc in Computer Science</h5>
-        <p>University of Peshawar (Marks: 80.58%)</p>
-      </div>
-      <!-- Add other degrees similarly -->
-    </section>
+  <!-- Publications Section -->
+  <section id="publications" class="container">
+    <h2 class="section-heading">Research Publications</h2>
+    <ul>
+      <li><strong>AktionFocusNet:</strong> A deep-learning model for human activity recognition with multi-head attention, achieving 97.91% accuracy.</li>
+      <li><strong>Mukhtasir-Khail-Net:</strong> An ultra-efficient CNN for sports activity recognition with 98.87% accuracy on wearable sensor data.</li>
+      <li><strong>Human Activity Recognition with Residual Connections:</strong> Developed a CNN model for HAR with high efficiency and 98.32% accuracy.</li>
+    </ul>
+  </section>
 
-    <!-- Skills -->
-    <section id="skills" class="section-content">
-      <h2 class="section-title">Skills</h2>
-      <ul>
-        <li><strong>Programming:</strong> Python, Java, C++, Flask, Django, FastAPI</li>
-        <li><strong>ML Libraries:</strong> PyTorch, Scikit-learn, TensorFlow, Keras, HuggingFace</li>
-        <li><strong>Tools:</strong> Git, GitHub, SQL, Linux</li>
-      </ul>
-    </section>
+  <!-- Education Section -->
+  <section id="education" class="container">
+    <h2 class="section-heading">Education</h2>
+    <ul>
+      <li><strong>MS in Computer Science</strong> from National University of Sciences & Technology (CGPA: 3.90)</li>
+      <li><strong>M.Sc in Computer Science</strong> from University of Peshawar (Marks: 80.58%)</li>
+      <li><strong>B.Sc in Computer Science</strong> from Bacha Khan University Charsadda</li>
+    </ul>
+  </section>
 
-    <!-- Projects -->
-    <section id="projects" class="section-content">
-      <h2 class="section-title">Projects</h2>
-      <div>
-        <h5>Voice-Based AI Assistant for Elderly</h5>
-        <p>Designed a voice-based system using Phi-3.5 for health-related assistance for the elderly.</p>
-      </div>
-      <div>
-        <h5>Document Summarization System</h5>
-        <p>Summarization system using LLAMA-2, implemented in Django.</p>
-      </div>
-      <!-- Add other projects similarly -->
-    </section>
+  <!-- Skills Section -->
+  <section id="skills" class="container">
+    <h2 class="section-heading">Skills</h2>
+    <ul>
+      <li><strong>Programming Languages:</strong> Python, Java, C++, Flask, Django, FastAPI</li>
+      <li><strong>Machine Learning Libraries:</strong> PyTorch, Scikit-learn, NLTK, TensorFlow, HuggingFace</li>
+      <li><strong>Other Skills:</strong> Git, SQL, Cloud Services (AWS, Azure, GCP)</li>
+    </ul>
+  </section>
 
-    <!-- Research Publications -->
-    <section id="research" class="section-content">
-      <h2 class="section-title">Research Publications</h2>
-      <ul>
-        <li>Enhanced Human Activity Recognition using Inertial Sensor Data (IEEE, Published)</li>
-        <li>Mukhtasir-Khail-Net: Neural Network for Sports Activity Recognition (IEEE, Published)</li>
-        <li>Attention-based Neural Network for Daily Activity Recognition (Accepted)</li>
-      </ul>
-    </section>
+  <!-- Contact Section -->
+  <section id="contact" class="container">
+    <h2 class="section-heading">Contact</h2>
+    <p>Email: <a href="mailto:shaidasherpao@gmail.com">shaidasherpao@gmail.com</a></p>
+    <p>LinkedIn: <a href="https://www.linkedin.com/in/shaidamuhammad" target="_blank">shaidamuhammad</a></p>
+    <p>GitHub: <a href="https://github.com/ShaidaMuhammad" target="_blank">ShaidaMuhammad</a></p>
+  </section>
 
-    <!-- Contact -->
-    <section id="contact" class="section-content">
-      <h2 class="section-title">Contact</h2>
-      <p>If you’d like to get in touch, feel free to reach out via email or LinkedIn!</p>
-    </section>
-  </div>
+  <!-- Footer -->
+  <footer class="footer">
+    <div class="container">
+      <p>&copy; 2024 Shaida Muhammad. All rights reserved.</p>
+    </div>
+  </footer>
 
-  <!-- Bootstrap & JS -->
+  <!-- Bootstrap JS and Popper -->
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
 </body>
-
 </html>
