--- a/index.html
+++ b/index.html
@@ -567,7 +567,7 @@
     <!-- Hero Section -->
     <section class="hero">
         <div class="container">
-            <h1>Shaida Muhammad</h1>
+            <h1 style="color: #0d1b2a;">Shaida Muhammad</h1>
             <h2>Machine Learning Engineer</h2>
             <div class="contact-info">
                 <a href="mailto:shaidasherpao@gmail.com"><i class="fas fa-envelope"></i> shaidasherpao@gmail.com</a>
