--- a/index.html
+++ b/index.html
@@ -948,7 +948,7 @@
             <div class="publication-item">
                 <h4 class="publication-title">
                     <a href="https://ieeexplore.ieee.org/document/11034469" target="_blank">Spak-Net: A Lightweight Convolutional Neural Network for Activity Recognition with Wearable Inertial Sensors</a>
-                    <span class="publication-status">Accepted</span>
+                    <span class="publication-status">Published</span>
                 </h4>
             </div>
             
