--- a/index.html
+++ b/index.html
@@ -940,7 +940,7 @@
             
             <div class="publication-item">
                 <h4 class="publication-title">
-                    Paying Attention to Human Activities: Recognizing Daily Activities with an Attention-based Neural Network and Inertial Sensors
+                    <a href="https://ieeexplore.ieee.org/document/11116432/" target="_blank"> Paying Attention to Human Activities: Recognizing Daily Activities with an Attention-based Neural Network and Inertial Sensors</a>
                     <span class="publication-status">Accepted</span>
                 </h4>
             </div>
