--- a/index.html
+++ b/index.html
@@ -959,6 +959,12 @@
                     <span class="publication-status">Published</span>
                 </h4>
             </div>
+            <div class="publication-item">
+                <h4 class="publication-title">
+                    <a href="https://doi.org/10.1109/JIOT.2026.3666469" target="_blank">From Steps to Sentiments: Cross-Domain Transfer Learning for Activity-Based Emotion Detection in Wearable IoT Systems</a>
+                    <span class="publication-status">Published</span>
+                </h4>
+            </div>
         </div>
     </section>
 
