--- a/index.html
+++ b/index.html
@@ -951,6 +951,13 @@
                     <span class="publication-status">Published</span>
                 </h4>
             </div>
+
+            <div class="publication-item">
+                <h4 class="publication-title">
+                    <a href="#" target="_blank">Machine Learning Approaches for Forecasting the Strength of Concrete Incorporating Fly Ash and Marble Slurry Waste</a>
+                    <span class="publication-status">Accepted</span>
+                </h4>
+            </div>
             
             <h3 style="margin: 2rem 0 1rem;">Journal Papers</h3>
             <div class="publication-item">
